--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,25 +1,30 @@
-<h1>Listing Articles</h1>
+<div class="container text-center">
+
  
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Text</th>
-    <th colspan="3"></th>
-  </tr>
+<h1>Nowości</h1>
  
+<div class="row">
   <% @articles.each do |article| %>
-    <tr>
-      <td><%= article.title %></td>
-      <td><%= article.text %></td>
-      <td><%= link_to 'Show', article_path(article) %></td>
-      <% if signed_in? %>
-          <% if current_user.is_admin%>
-            <td><%= link_to 'Edit', edit_article_path(article) %></td>
-            <td><%= link_to 'Destroy', article_path(article),
-              method: :delete,
-              data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      <% end %>
-    </tr>
+      <div class="col-sm-4">
+      <div class="card border-dark mb-3">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title"><%= article.title %></h5>
+          <p class="card-text"><%= article.text %></p>
+          <div class="btn btn-info"><%= link_to 'Więcej', article_path(article) %></div>
+            <% if signed_in? %>
+              <% if current_user.is_admin%>
+                <div class="btn btn-warning"><%= link_to 'Edytuj', edit_article_path(article) %></div>
+                <div class="btn btn-danger"><%= link_to 'Usuń', article_path(article),
+                  method: :delete,
+                  data: { confirm: 'Are you sure?' } %></div>
+              <% end %>
+            <% end %>
+        </div>
+        </div>
+      </div>
   <% end %>
-</table>
+</div>
+ 
+
+</div>
