--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @article, local: true do |form| %>
+<%= form_with model: @article, html: { multipart: true } do |form| %>
  
   <% if @article.errors.any? %>
     <div id="error_explanation">
@@ -14,6 +14,11 @@
     </div>
   <% end %>
  
+  <p>
+    <%= form.label :image %><br>
+    <%= form.file_field :image %>
+  </p>
+
   <p>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
