--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,9 @@
   <% @articles.each do |article| %>
       <div class="col-sm-4">
       <div class="card border-dark mb-3">
-        <img class="card-img-top" src="..." alt="Card image cap">
+      <p>
+        <%= image_tag article.image.url(:medium) %>
+      </p>
         <div class="card-body">
           <h5 class="card-title"><%= article.title %></h5>
           <p class="card-text"><%= article.text %></p>
