--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,23 +39,19 @@
           <% end %>
         <% end %>
 
-        <li class="nav-item">
-          <a class="nav-link" href="#">Kontakt</a>
-        </li>
-
         <% if signed_in? %>
           <li class="nav-item">
-            <a class="nav-link" href="#">Ligi</a>
+            <a class="nav-link"> <%= link_to 'Mecze', matches_path %> </a>
         </li>
         <% end %>
 
       </ul>
 
         <% if signed_in? %>
-          Signed in as: <%= current_user.email %>
-          <%= button_to 'Sign out', sign_out_path, method: :delete %>
+          Zalogowany jako:  <%= link_to current_user.email, edit_user_path(current_user) %>
+          <%= button_to 'Wyloguj', sign_out_path, method: :delete %>
         <% else %>
-          <%= link_to 'Sign in', sign_in_path %>
+          <%= link_to 'Zaloguj', sign_in_path %>
         <% end %>
 
         <div id="flash">
