--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,12 @@
 
         <% if signed_in? %>
           <li class="nav-item">
-            <a class="nav-link"> <%= link_to 'Mecze', matches_path %> </a>
+            <a class="nav-link"> <%= link_to 'Gry', matches_path %> </a>
+        </li>
+        <% end %>
+        <% if signed_in? %>
+          <li class="nav-item">
+            <a class="nav-link"> <%= link_to 'Nowa gra', new_match_path %> </a>
         </li>
         <% end %>
 
