--- a/app/views/matches/_form.html.erb
+++ b/app/views/matches/_form.html.erb
@@ -14,23 +14,28 @@
     </div>
   <% end %>
   
-  <div class="row border">
-    <div class="col-1 border bg-light">Gracz:</div>
-    <div class="col"><%= form.number_field :player_1_id %></div>
-    <div class="col"><%= form.number_field :player_2_id %></div>
-    <div class="col"><%= form.number_field :player_3_id %></div>
-    <div class="col"><%= form.number_field :player_4_id %></div>
-  </div>
-  <div class="row border">
-    <div class="col-1 border bg-light">Wynik:</div>
-    <div class="col"><%= form.number_field :player_1_score %></div>
-    <div class="col"><%= form.number_field :player_2_score %></div>
-    <div class="col"><%= form.number_field :player_3_score %></div>
-    <div class="col"><%= form.number_field :player_4_score %></div>
+  <div class="form-group">
+    <div class="row border">
+        <div class="col border bg-light form-control">Gracz:</div>
+        <div class="col"><%= form.number_field :player_1_id, class:"form-control" %></div>
+        <div class="col"><%= form.number_field :player_2_id, class:"form-control" %></div>
+        <div class="col"><%= form.number_field :player_3_id, class:"form-control" %></div>
+        <div class="col"><%= form.number_field :player_4_id, class:"form-control" %></div>
+
+    </div>
+    
+    <div class="row border">
+        <div class="col border bg-light form-control">Wynik:</div>
+        <div class="col"><%= form.number_field :player_1_score, class:"form-control" %></div>
+        <div class="col"><%= form.number_field :player_2_score, class:"form-control" %></div>
+        <div class="col"><%= form.number_field :player_3_score, class:"form-control" %></div>
+        <div class="col"><%= form.number_field :player_4_score, class:"form-control" %></div>
+
+    </div>
   </div>
   
   <p>
-    <%= form.submit %>
+    <%= form.submit class:"form-control"%>
   </p>
  
 <% end %>
