--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,12 +2,13 @@
 
  
 <h1>Nowości</h1>
- 
+
+
 <div class="row">
   <% @articles.each do |article| %>
       <div class="col-sm-4">
-      <div class="card border-dark mb-3">
-      <p>
+      <div class="card border-dark mb-3 bg-secondary">
+      <p class="mt-3">
         <%= image_tag article.image.url(:medium) %>
       </p>
         <div class="card-body">
@@ -30,3 +31,5 @@
  
 
 </div>
+
+
