--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,12 @@
 <body>
 
 
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <a class="navbar-brand">
         <img src="https://www.singaporemint.com/media/catalog/product/cache/978d88c4fa4223d1f4b49319a9c20eba/F/5/F535-1_2.png" width="50" height="50" alt="">
+      
     </a>
-    <a class="navbar-brand">Poznański klub mahjonga</a>
+    <a class="navbar-brand">Poznański klub mahjonga </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -26,35 +27,42 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
 
-          <li class="nav-item active">
-            <a class="nav-link"> <%= link_to 'Artykuły', articles_path %> </a>
+
+          <li class="nav-item">
+            <a class="nav-link" href=<%= welcome_index_path%>> Strona domowa </a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href=<%= articles_path%>>Artykuły</a>
           </li>
 
 
           <% if signed_in? %>
             <% if current_user.is_admin%>
-              <li class="nav-item active">
-                <a class="nav-link"> <%= link_to 'Nowy artykuł', new_article_path %> </a>
+              <li class="nav-item">
+                <a class="nav-link" href=<%= new_article_path%>>Nowy artykuł</a>
               </li>
             <% end %>
           <% end %>
 
           <% if signed_in? %>
             <li class="nav-item">
-              <a class="nav-link"> <%= link_to 'Gry', matches_path %> </a>
+              <a class="nav-link" href=<%= matches_path%>> Gry</a>
           </li>
           <% end %>
+          
           <% if signed_in? %>
             <li class="nav-item">
-              <a class="nav-link"> <%= link_to 'Nowa gra', new_match_path %> </a>
+              <a class="nav-link"href=<%= new_match_path%>>Nowa gra </a>
           </li>
           <% end %>
 
         </ul>
-
+<ul class="navbar-nav">
+        <li class="nav-item">
           <% if signed_in? %>
             Zalogowany jako:  <%= link_to current_user.email, edit_user_path(current_user) %>
-            <%= button_to 'Wyloguj', sign_out_path, method: :delete %>
+            <div class="btn btn-danger"> <%= link_to 'Wyloguj', sign_out_path, method: :delete %> </div>
           <% else %>
             <%= link_to 'Zaloguj', sign_in_path %>
           <% end %>
@@ -64,13 +72,14 @@
               <div class="flash <%= key %>"><%= value %></div>
             <% end %>
           </div> 
+        </li>
+</ul>
     </div>
   </nav>
-  
+
   <div class="container-fluid">
     <%= yield %>
   </div>
-
 
 
 </body>
