--- a/app/views/user/_form.html.erb
+++ b/app/views/user/_form.html.erb
@@ -19,30 +19,42 @@
         <h3>Informacje użytkownika</h3>
         
         <form class="form-horizontal" role="form">
+
           <div class="form-group">
             <label class="col-lg-3 control-label">Imię:</label>
             <div class="col-lg-8">
               <input class="form-control" type="text" value="">
             </div>
           </div>
+
           <div class="form-group">
             <label class="col-lg-3 control-label">Nazwisko:</label>
             <div class="col-lg-8">
               <input class="form-control" type="text" value="">
             </div>
           </div>
+
           <div class="form-group">
             <label class="col-lg-3 control-label">Nazwa uzytkownika:</label>
             <div class="col-lg-8">
               <%= form.text_field :username, class:"form-control" %>
             </div>
           </div>
+
           <div class="form-group">
             <label class="col-lg-3 control-label">Email:</label>
             <div class="col-lg-8">
               <%= form.text_field :email, class:"form-control" %>
             </div>
           </div>
+
+          <div class="form-group">
+            <label class="col-lg-3 control-label">Admin:</label>
+            <div class="controls">
+              <%= form.select(:is_admin, options_for_select([['Zwykly', 0],['Admin',1]]))%>
+            </div>
+          </div>
+
           <div class="col-lg-8">
             <%= form.submit class:"form-control" %>
           </div>
