--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,12 @@
 
 <div class="space"></div>
 
-<div class="jumbotron card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Others/gradient1.jpg);">
+<div class="jumbotron card card-image jumbo">
+
   <div class="text-white text-center py-5 px-4 ">
     <div>
       <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>Witamy na stronie</strong></h2>
-      <p class="mx-5 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem,
-        optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos. Odit sed qui, dolorum!
+      <p class="mx-5 mb-5">Strona Poznańskiego klubu mahjonga
       </p>
       <a class="btn btn-outline-white btn-md"><i class="fas fa-clone left"></i> View project</a>
     </div>
