--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,7 @@
 <div class="row">
   <% @articles.each do |article| %>
       <div class="col-sm-4">
-      <div class="card border-dark mb-3 bg-secondary">
+      <div class="jumbotron card border-dark mb-3">
       <p class="mt-3">
         <%= image_tag article.image.url(:medium) %>
       </p>
