--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href=<%= articles_path%>>Artykuły</a>
+            <a class="nav-link" href=<%= articles_path%>>Archiwum</a>
           </li>
 
 
