--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -2,24 +2,27 @@
 
 
 <% @matches.each do |match| %>
-<div class="p-2">
-  <div class="row border bg-light">
-    <div class="col-sm-1">Data</div>
-    <div class="col-sm"><%= match.created_at %></div>
-  </div>
-  <div class="row">
-    <div class="col-sm-1 border bg-light">Gracze:</div>
-    <div class="col-sm-2"><%=User.find_by_id(match.player_1_id).email%><%= link_to ' Profil', user_path(User.find_by_id(match.player_1_id)) %></div>
-    <div class="col-sm-2"><%=User.find_by_id(match.player_2_id).email%><%= link_to ' Profil', user_path(User.find_by_id(match.player_2_id)) %></div>
-    <div class="col-sm-2"><%=User.find_by_id(match.player_3_id).email%><%= link_to ' Profil', user_path(User.find_by_id(match.player_3_id)) %></div>
-    <div class="col-sm-2"><%=User.find_by_id(match.player_4_id).email%><%= link_to ' Profil', user_path(User.find_by_id(match.player_4_id)) %></div>
-  </div>
-  <div class="row">
-    <div class="col-sm-1 border bg-light">Wyniki:</div>
-    <div class="col-sm-2"><%= match.player_1_score %></div>
-    <div class="col-sm-2"><%= match.player_2_score %></div>
-    <div class="col-sm-2"><%= match.player_3_score %></div>
-    <div class="col-sm-2"><%= match.player_4_score %></div>
+
+<div class="jumbo2 card card-image">
+  <div class="p-2">
+    <div class="row border bg-light">
+      <div class="col-sm-1">Data</div>
+      <div class="col-sm"><%= match.created_at %></div>
+    </div>
+    <div class="row">
+      <div class="col-sm-1 border bg-light">Gracze:</div>
+      <div class="col-sm-2"><%=User.find_by_id(match.player_1_id).email%><%= link_to ' Profil', user_path(User.find_by_id(match.player_1_id)) %></div>
+      <div class="col-sm-2"><%=User.find_by_id(match.player_2_id).email%><%= link_to ' Profil', user_path(User.find_by_id(match.player_2_id)) %></div>
+      <div class="col-sm-2"><%=User.find_by_id(match.player_3_id).email%><%= link_to ' Profil', user_path(User.find_by_id(match.player_3_id)) %></div>
+      <div class="col-sm-2"><%=User.find_by_id(match.player_4_id).email%><%= link_to ' Profil', user_path(User.find_by_id(match.player_4_id)) %></div>
+    </div>
+    <div class="row">
+      <div class="col-sm-1 border bg-light">Wyniki:</div>
+      <div class="col-sm-2"><%= match.player_1_score %></div>
+      <div class="col-sm-2"><%= match.player_2_score %></div>
+      <div class="col-sm-2"><%= match.player_3_score %></div>
+      <div class="col-sm-2"><%= match.player_4_score %></div>
+    </div>
   </div>
 </div>
 <% end %>
