--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,39 +1,45 @@
 
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div id="carousel" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(45).jpg"
-        alt="First slide">
-      <div class="carousel-caption">
-        <h1 class="h1-responsive"><%= Article.last.title %></h1>
-        <p><%= Article.last.text %></p>
-        <p><%= Article.last.created_at.to_date %></p>
-      </div>
+      <a href="/articles/<%= Article.last.id %>"> 
+        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(45).jpg"
+          alt="First slide">
+        <div class="carousel-caption">
+          <h1 class="h1-responsive"><%= Article.last.title %></h1>
+          <p><%= Article.last.text %></p>
+          <p><%= Article.last.created_at.to_date %></p>
+        </div>
+      </a>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(46).jpg"
-        alt="Second slide">
-      <div class="carousel-caption">
-        <h1 class="h1-responsive"><%= Article.second_to_last.title %><</h1>
-        <p><%= Article.second_to_last.text %></p>
-        <p><%= Article.second_to_last.created_at.to_date %></p>
-      </div>
+      <a href="/articles/<%= Article.second_to_last.id %>"> 
+        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(46).jpg"
+          alt="Second slide">
+        <div class="carousel-caption">
+          <h1 class="h1-responsive"><%= Article.second_to_last.title %><</h1>
+          <p><%= Article.second_to_last.text %></p>
+          <p><%= Article.second_to_last.created_at.to_date %></p>
+        </div>
+      </a>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(47).jpg"
-        alt="Third slide">
-      <div class="carousel-caption">
-        <h1 class="h1-responsive"><%= Article.third_to_last.title %></h1>
-        <p><%= Article.third_to_last.text %></p>
-        <p><%= Article.third_to_last.created_at.to_date %></p>
-      </div>
+      <a href="/articles/<%= Article.third_to_last.id %>"> 
+        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(47).jpg"
+          alt="Third slide">
+        <div class="carousel-caption">
+          <h1 class="h1-responsive"><%= Article.third_to_last.title %></h1>
+          <p><%= Article.third_to_last.text %></p>
+          <p><%= Article.third_to_last.created_at.to_date %></p>
+        </div>
+      </a>
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
