--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,6 @@
   </head>
 
 
-<body>
 
 
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -82,4 +81,15 @@
   </div>
 
 
-</body>
+
+<!-- Footer -->
+<footer class="page-footer font-small blue">
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a> Gałecki Bartosz</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
