--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     	
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="initial-scale=1.0"/>
   </head>
 
 
