--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
 
 
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <a class="navbar-brand">
         <img src="https://www.singaporemint.com/media/catalog/product/cache/978d88c4fa4223d1f4b49319a9c20eba/F/5/F535-1_2.png" width="50" height="50" alt="">
       
@@ -89,7 +89,7 @@
 <footer class="page-footer font-small blue">
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+  <div class="footer-copyright text-center py-3">Testowa stronka ruby on rails:
     <a> Gałecki Bartosz</a>
   </div>
   <!-- Copyright -->
