--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,24 +6,24 @@
 
 <div class="row">
   <% @articles.each do |article| %>
-      <div class="col-sm-4">
-      <div class="jumbotron card border-dark mb-3">
-      <p class="mt-3">
-        <%= image_tag article.image.url(:medium) %>
-      </p>
-        <div class="card-body">
-          <h5 class="card-title"><%= article.title %></h5>
-          <p class="card-text"><%= article.text %></p>
-          <div class="btn btn-info"><%= link_to 'Więcej', article_path(article) %></div>
-            <% if signed_in? %>
-              <% if current_user.is_admin%>
-                <div class="btn btn-warning"><%= link_to 'Edytuj', edit_article_path(article) %></div>
-                <div class="btn btn-danger"><%= link_to 'Usuń', article_path(article),
-                  method: :delete,
-                  data: { confirm: 'Are you sure?' } %></div>
+      <div class="col-lg-4 col-md-6 col-xs-12">
+        <div class="jumbotron card border-dark">
+          <%= image_tag article.image.url(:medium), :class=>"card-img-top" %>
+          <div class="card-body">
+            <h5 class="card-title"><%= article.title %></h5>
+            <p class="card-text"><%= article.text %></p>
+            <span>
+            <div class="btn btn-info"><%= link_to 'Więcej', article_path(article) %></div>
+              <% if signed_in? %>
+                <% if current_user.is_admin%>
+                  <div class="btn btn-warning"><%= link_to 'Edytuj', edit_article_path(article) %></div>
+                  <div class="btn btn-danger"><%= link_to 'Usuń', article_path(article),
+                    method: :delete,
+                    data: { confirm: 'Are you sure?' } %></div>
+                <% end %>
               <% end %>
-            <% end %>
-        </div>
+            </div>
+            </span>
         </div>
       </div>
   <% end %>
