--- a/app/views/user/_form.html.erb
+++ b/app/views/user/_form.html.erb
@@ -48,13 +48,18 @@
             </div>
           </div>
 
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Admin:</label>
-            <div class="controls">
-              <%= form.select(:is_admin, options_for_select([['Zwykly', 0],['Admin',1]]))%>
-            </div>
-          </div>
 
+          <% if signed_in? %>
+            <% if current_user.is_admin%>
+              <<div class="form-group">
+              <label class="col-lg-3 control-label">Admin:</label>
+              <div class="controls">
+                <%= form.select(:is_admin, options_for_select([['Zwykly', 0],['Admin',1]]))%>
+              </div>
+            </div>
+            <% end %>
+          <% end %>
+          
           <div class="col-lg-8">
             <%= form.submit class:"form-control" %>
           </div>
