--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,70 +1,72 @@
-
-<div id="carousel" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <a href="/articles/<%= Article.last.id %>"> 
-        <%= image_tag Article.last.image.url(:large), :class=>"card-img-top" %>
-        <div class="carousel-caption">
-          <h1><%= Article.last.title %></h1>
-          <p><%= Article.last.text %></p>
-          <p><%= Article.last.created_at.to_date %></p>
-        </div>
-      </a>
+<%  if Article.count > 2 %>
+  <div id="carousel" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <a href="/articles/<%= Article.last.id %>"> 
+          <%= image_tag Article.last.image.url(:large), :class=>"card-img-top" %>
+          <div class="carousel-caption">
+            <h1><%= Article.last.title %></h1>
+            <p><%= Article.last.text %></p>
+            <p><%= Article.last.created_at.to_date %></p>
+          </div>
+        </a>
+      </div>
+      <div class="carousel-item">
+        <a href="/articles/<%= Article.second_to_last.id %>"> 
+          <%= image_tag Article.second_to_last.image.url(:large), :class=>"card-img-top" %>
+          <div class="carousel-caption">
+            <h1><%= Article.second_to_last.title %><</h1>
+            <p><%= Article.second_to_last.text %></p>
+            <p><%= Article.second_to_last.created_at.to_date %></p>
+          </div>
+        </a>
+      </div>
+      <div class="carousel-item">
+        <a href="/articles/<%= Article.third_to_last.id %>"> 
+          <%= image_tag Article.third_to_last.image.url(:large), :class=>"card-img-top" %>
+          <div class="carousel-caption">
+            <h1><%= Article.third_to_last.title %></h1>
+            <p><%= Article.third_to_last.text %></p>
+            <p><%= Article.third_to_last.created_at.to_date %></p>
+          </div>
+        </a>
+      </div>
     </div>
-    <div class="carousel-item">
-      <a href="/articles/<%= Article.second_to_last.id %>"> 
-        <%= image_tag Article.second_to_last.image.url(:large), :class=>"card-img-top" %>
-        <div class="carousel-caption">
-          <h1><%= Article.second_to_last.title %><</h1>
-          <p><%= Article.second_to_last.text %></p>
-          <p><%= Article.second_to_last.created_at.to_date %></p>
-        </div>
-      </a>
-    </div>
-    <div class="carousel-item">
-      <a href="/articles/<%= Article.third_to_last.id %>"> 
-        <%= image_tag Article.third_to_last.image.url(:large), :class=>"card-img-top" %>
-        <div class="carousel-caption">
-          <h1><%= Article.third_to_last.title %></h1>
-          <p><%= Article.third_to_last.text %></p>
-          <p><%= Article.third_to_last.created_at.to_date %></p>
-        </div>
-      </a>
-    </div>
+    <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-  <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 
+<%end%>
 
 <div class="jumbotron card card-image">
 
-  <div class="text-black text-center ">
-    <div>
-      <h2 class="card-title h1-responsive font-bold"><strong>Witamy na stronie</strong></h2>
-      <p class="font-bold">Poznańskiego klubu mahjonga
-      </p>
-      <span>
-        <a class="btn" href="https://www.facebook.com/mahjongpoznan/">
-          <%= fa_icon "facebook-square 4x"%>
-        </a>
-        <a class="btn" href="#">
-          <%= fa_icon "instagram 4x"%>
-        </a>
-        <a class="btn" href="#">
-          <%= fa_icon "twitter-square 4x"%>
-        </a>
-      </span>
+    <div class="text-black text-center ">
+      <div>
+        <h2 class="card-title h1-responsive font-bold"><strong>Witamy na stronie</strong></h2>
+        <p class="font-bold">Poznańskiego klubu mahjonga
+        </p>
+        <span>
+          <a class="btn" href="https://www.facebook.com/mahjongpoznan/">
+            <%= fa_icon "facebook-square 4x"%>
+          </a>
+          <a class="btn" href="#">
+            <%= fa_icon "instagram 4x"%>
+          </a>
+          <a class="btn" href="#">
+            <%= fa_icon "twitter-square 4x"%>
+          </a>
+        </span>
+      </div>
     </div>
+    
   </div>
-  
-</div>
+
 
 
 
