--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,6 +59,12 @@
           </li>
           <% end %>
 
+           <% if signed_in? %>
+            <li class="nav-item">
+              <a class="nav-link" href=<%= leagues_path%>> Ligi</a>
+          </li>
+          <% end %>
+
         </ul>
     <ul class="navbar-nav">
     
