Article/show picture fix

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,7 +15,7 @@
     <div> 
       
 
-      <p> <%= image_tag @article.image.url(:large) %> </p>
+      <p> <%= image_tag @article.image.url(:large) , :class=>"card-img-top" %> </p>
       
       <p>
         <strong>Text:</strong>
