--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -7,20 +7,20 @@
 <div class="row">
   <% @leagues.each do |league| %>
       <div class="col-lg-12">
-        <div class="jumbotron card border-dark">
+        <div class="card border-dark">
             <div class="card-body">
-                <h5 class="card-title"><%= league.name %></h5>
+                <h2 class="card-title border bg-light"><%= league.name %></h2>
                 <div>
                     <div class="p-2">
 
                         <div class="row border bg-light">
-                            <div class="col-sm-2">Gracz</div>
+                            <div class="col-sm-4">Gracz</div>
                             <div class="col-sm">Suma wyników</div>
                         </div>
 
                         <%= @league_scores[league.id].each_key do |key| %>
                             <div class="row">
-                                <div class="col-sm-2 border bg-light"><%= User.find(key).email%></div>
+                                <div class="col-sm-4 border bg-light"><%= User.find(key).email%></div>
                                 <div class="col-sm"><%= @league_scores[league.id][key] %></div>
                             </div>
                         <%end%>
