Matches index display change

--- a/app/views/leagues/_form.html.erb
+++ b/app/views/leagues/_form.html.erb
@@ -15,6 +15,10 @@
             <div class="col-lg-8">
               <%= form.text_field :name, class:"form-control" %>
             </div>
+            <label class="col-lg-3 control-label">Tło:</label>
+            <div class="col-lg-8">
+              <%= form.file_field :image %>
+            </div>
           </div>
 
           <div class="col-lg-8">
