--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,6 @@
             <a class="nav-link" href=<%= articles_path%>>Archiwum</a>
           </li>
 
-
           <% if signed_in? %>
             <% if current_user.is_admin%>
               <li class="nav-item">
@@ -64,6 +63,10 @@
               <a class="nav-link" href=<%= leagues_path%>> Ligi</a>
           </li>
           <% end %>
+
+          <li class="nav-item">
+            <a class="nav-link" href=<%= new_contact_path%>>Kontakt</a>
+          </li>
 
         </ul>
     <ul class="navbar-nav">
