--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,19 +1,52 @@
 <%= form_with model: @contact do |f| %>
-    <div class="col-md-6">
-        <div>Imie</div>
-        <%= f.text_field  :name, required: true, class: "form-text-area" %></br>
+  <section id="contact" class="content-section text-center">
+        <div class="contact-section">
+            <div class="container">
+              <h2>Skontaktuj się z nami</h2>
+              <p>Jeśli chcesz o coś zapytać, śmiało wyślij nam wiadomość.</p>
+              <div class="row">
+                <div class="col-md-12 col-md-offset-2">
+                  <form class="form-horizontal">
+                    <div class="form-group">
+                      <label for="exampleInputName2">Imię</label>
+                      <%= f.text_field  :name, required: true, class: "form-control" %>
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleInputEmail2">Email</label>
+                      <%= f.text_field :email, required: true, class: "form-control" %>
+                    </div>
+                    <div class="form-group ">
+                      <label for="exampleInputText">Twoja wiadomość</label>
+                      <%= f.text_area :message, rows: 8, cols: 40, required: true, class: "form-control",
+                          placeholder: "Treść wiadomości"%>
+                    </div>
+                    <%= f.submit 'Wyślij', class: 'btn btn-info' %>
+                  </form>
 
-        <div>Email</div>
-        <%= f.text_field :email, required: true, class: "form-text-area" %></br>
+                </div>
+              </div>
+            </div>
+        </div>
+      </section>
 
-      <div>Wiadomość</div>
-      <%= f.text_area :message, rows: 8, cols: 40, required: true, class: "form-text-area",
-                        placeholder: "Send me a message"%></br>
 
 
-      <%= f.submit 'Wyślij', class: 'btn btn-primary' %>
-    </div>
-  <% end %>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <% end %>
   <div class="col-md-6" id="flash-message">
     <%= render 'flash' %>
   </div>
