--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,3 @@
 
-<h1>Skontaktuj się z nami</h1>
+<%= stylesheet_link_tag 'contacts', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= render 'form' %>
-  </div>
