--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
         </ul>
     <ul class="navbar-nav">
     
-            <li class="nav-item">
+            <li class="nav-link">
               <% if signed_in? %>
                 Zalogowany jako:  <%= link_to current_user.email, edit_user_path(current_user) %>
                 <div class="btn btn-danger"> <%= link_to 'Wyloguj', sign_out_path, method: :delete %> </div>
