Fixed flash messages/changed email sender to gmail

--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -28,25 +28,8 @@
             </div>
         </div>
       </section>
+<% end %>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <% end %>
-  <div class="col-md-6" id="flash-message">
+ <div id="flash-message">
     <%= render 'flash' %>
-  </div>
+</div>
