--- a/app/views/contacts/create.js.erb
+++ b/app/views/contacts/create.js.erb
@@ -1,2 +1,4 @@
+console.log("Test Test Test");
+
 $('#contact').html("<%= j render 'form' %>");
-$('#flash-message').html("<%= j render 'flash' %>").delay(3000).fadeOut(4000);
+$('#flash-message').html("<%= j render 'flash' %>");
