--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag 'contacts', media: 'all'%>
 
-<%= stylesheet_link_tag 'contacts', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= render 'form' %>
+
+<%= render 'form' %>
