--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
 
 
-  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-md bg-dark navbar-dark shift">
     <a class="navbar-brand">
         <img src="https://www.singaporemint.com/media/catalog/product/cache/978d88c4fa4223d1f4b49319a9c20eba/F/5/F535-1_2.png" width="50" height="50" alt="">
       
@@ -69,12 +69,11 @@
           </li>
 
         </ul>
-    <ul class="navbar-nav">
     
-            <li class="nav-link">
+          <li class="nav-link">
               <% if signed_in? %>
-                Zalogowany jako:  <%= link_to current_user.email, edit_user_path(current_user) %>
-                <div class="btn btn-danger"> <%= link_to 'Wyloguj', sign_out_path, method: :delete %> </div>
+               <a> Zalogowany jako:</a>  <%= link_to current_user.email, edit_user_path(current_user) %>
+                <div class="btn btn-danger"> <%= link_to 'Wyloguj', sign_out_path, method: :delete, class: "nav-link" %> </div>
               <% else %>
                 <%= link_to 'Zaloguj', sign_in_path %>
               <% end %>
@@ -83,7 +82,6 @@
                 <%= image_tag current_user.image.url(:icon) %>
               <%end%>
             </li>
-    </ul>
 
     </div>
   </nav>
